<resources>
    <string name="app_name">樱花动漫</string>
    <string name="yhdm">Yhdm</string>
    <string name="imomoe">SiliSili</string>
    <string name="app_sub_name">时间表</string>
    <string name="search">搜索</string>
    <string name="permissions">为了正常使用，需要以下权限!</string>
    <string name="permissions_error">未能获取到相关权限</string>
    <string name="home_title">新番时间表</string>
    <string name="home_tag_title">动漫分类</string>
    <string name="home_movie_title">动漫电影</string>
    <string name="home_zt_title">动漫专题</string>
    <string name="home_zt_title2">精品专题</string>
    <string name="home_jcb_title">剧场版</string>
    <string name="home_my_title">我的</string>
    <string name="home_my_item_title">我的追番</string>
    <string name="home_setting_title">设置</string>
    <string name="home_setting_item_title">设置</string>
    <string name="home_other_title">其他</string>
    <string name="home_other_item_title">关于</string>
    <string name="search_hint">请输入动漫名</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="x5_info_title">注意事项</string>
    <string name="x5_info">本应用只是爬取樱花动漫（Yhdm、SiliSili）网站部分内容编写的第三方APP，官方并未发布APP，仅供学习交流。\n一些番剧可能需要使用WebView播放。\n新番多数可以直接使用内置播放器或外部播放器播放(某些可能第一次播放失败，需多尝试几次)。\n注：并不是所有番剧都能正常播放（多为网站本身原因）~</string>
    <string name="x5_info_positive">OJBK</string>
    <string name="empty">未能获取到任何信息</string>
    <string name="loading">加载中</string>
    <string name="load_error">加载失败</string>
    <string name="loading_info">请在数据加载完毕后再进行操作</string>
    <string name="load_desc_info">请在番剧详情加载完毕后再进行操作</string>
    <string name="no_more">数据全部加载完毕</string>
    <string name="select_player">请选择视频播放器</string>
    <string name="select_parse_interface">选择解析接口 [可能会失效]</string>
    <string name="select_parse_interface_msg">从免费的VIP解析接口中嗅探视频真实地址，该操作耗时清稍等，可能因接口问题无法获取到视频地址时，可尝试更换其他接口</string>
    <string name="select_video_source">选择播放源</string>
    <string name="parsing">解析中，请稍后&#8230;</string>
    <string name="error_600">解析失败，无法获取视频地址！</string>
    <string name="error_700">下载出错，无法获取视频地址！</string>
    <string name="error_800">未能获取到播放地址\n1、解析方法不支持\n2、播放地址不存在\n3、可以尝试打开原页面去播放</string>
    <string name="join_ok">(´・ω・`) 自己追的番就要好好看完哦！</string>
    <string name="join_error">(﹁"﹁) 哼！竟然真的抛弃了人家。</string>
    <string name="parsing_error">OH~解析出错了\n代码无法解析该界面信息~\n</string>
    <string name="error_msg">无数据</string>
    <string name="no_playlist_error">该番剧暂无播放列表。</string>
    <string name="get_drama_error">获取剧集信息出错</string>
    <string name="should_be_sniffer">尝试嗅探获取播放地址&#8230;</string>
    <string name="should_be_used_web">尝试嗅探获取播放地址&#8230;</string>
    <string name="open_web_view">解析视频地址失败，请尝试通过浏览器访问</string>
    <string name="loading_video__failed">视频地址无法访问，加载失败！</string>
    <string name="online">在线</string>
    <string name="multi">多季</string>
    <string name="recommend">相关推荐</string>
    <string name="no_update">暂无更新</string>
    <string name="play_not_found_title">解析失败</string>
    <string name="play_not_found_positive">访问原页面</string>
    <string name="play_not_found_negative">取消</string>
    <string name="set_api">自定义解析接口</string>
    <string name="api">0</string>
    <string name="x5">X5内核&lt;若webView闪退需禁用&gt;</string>
    <string name="x5_up">启用</string>
    <string name="x5_down">禁用</string>
    <string name="page_title">设置参数</string>
    <string name="page_positive">确定</string>
    <string name="page_positive_edit">修改</string>
    <string name="page_negative">取消</string>
    <string name="page_def">恢复默认</string>
    <string name="domain_title">设置域名（PC端）</string>
    <string name="set_domain_ok">域名更改成功</string>
    <string name="set_domain_error1">参数不能为空</string>
    <string name="set_domain_error2">参数格式错误</string>
    <string name="api_error_1">参数不能为空</string>
    <string name="api_error_2">参数格式不正确</string>
    <string-array name="player">
        <item>内置</item>
        <item>外置</item>
    </string-array>
    <string name="player_default">内置</string>
    <string name="domain">域名设置（备用）</string>
    <string name="domain_msg">该功能用于网站域名变更导致应用获取数据异常，应用未及时更新时使用。\n如果网站仅变更域名，网页布局无变动，你可在此输入相关站点的新域名保存即可。</string>
    <string name="domain_url">http://www.iyinghua.io</string>
    <string name="imomoe_url">https://www.silisili.link</string>
    <string name="set_check_favorite_update">追番更新检测（仅支持YHDM源）</string>
    <string name="check_favorite_update_default">启用</string>
    <string name="set_download_number">同时下载任务数</string>
    <string name="set_download_number_default">1</string>
    <string name="set_slidr">滑动返回配置</string>
    <string name="set_slidr_default">全局</string>
    <string name="set_light_theme">切至亮色主题</string>
    <string name="set_dark_theme">切至暗色主题</string>
    <string name="remove_downloads_title">清除所有下载记录</string>
    <string name="remove_downloads_msg">当使用下载功能出现异常时可进行该操作</string>
    <string name="remove_downloads_content">是否清空所有下载记录？\n执行后将清空所有下载记录，但不会删除文件。</string>
    <string name="danmu_title">播放番剧时弹幕开关</string>
    <string name="danmu_open">开</string>
    <string name="danmu_close">关</string>
    <string name="player_kernel_title">内置播放器内核</string>
    <string name="set_player_kernel">请选择播放器内核</string>
    <string name="exoplayer">ExoPlayer</string>
    <string name="ijkplayer">IjkPlayer</string>
    <string name="start_check_update">启动时检查更新</string>
    <string name="open_check_update">开启</string>
    <string name="close_check_update">关闭</string>
    <string name="other_operation">操作</string>
    <string name="anthology">选集</string>
    <string name="api_title">自定义解析API</string>
    <string name="delete_api_title">删除后将无法恢复。\n是否删除？</string>
    <string name="no_api">未自定义解析Api~</string>
    <string name="phone_model">手机版</string>
    <string name="pc_model">电脑版</string>
    <string name="down">下载</string>
    <string name="open_in_browser">通过浏览器打开</string>
    <string name="open_browser">网页访问</string>
    <string name="check_favorite_update">检测追番是否有更新~</string>
    <string name="favorite_title">我的追番</string>
    <string name="empty_favorite">空空如也呢(－∀＝)</string>
    <string name="favorite">追番</string>
    <string name="has_favorite">已追番</string>
    <string name="remove_favorite">弃番</string>
    <string name="remove_api">移除</string>
    <string name="tag_title">动漫分类</string>
    <string name="about">关于</string>
    <string name="open_source_library">开源相关</string>
    <string-array name="source">
        <item>Yhdm</item>
        <item>SiliSili</item>
    </string-array>
    <string name="statement">声明</string>
    <string name="statement_desc">仅供学习交流\n禁止非法传播或用于商业用途</string>
    <string name="test_model">测试</string>
    <string name="test_model_desc">Xiaomi 12S Ultra | XiaomiPad 5 Pro\nAndroid 13</string>
    <string name="now_version">当前版本</string>
    <string name="final_compile">最后编译日期</string>
    <string name="final_compile_time">2023年11月4日</string>
    <string name="cache">缓存目录</string>
    <string name="cache_text">/SakuraAnime/\n卸载后自行删除此目录</string>
    <string name="github">Github仓库</string>
    <string name="github_info">帮我点个Star？:-)\nhttps://github.com/670848654/SakuraAnime</string>
    <string name="github_url">https://github.com/670848654/SakuraAnime</string>
    <string name="update_log">更新日志</string>
    <string name="check_update">检测更新</string>
    <string name="check_update_text">检测更新中&#8230;</string>
    <string name="download">下载中,请等待</string>
    <string name="ck_network_error">连接Github超时，请重试</string>
    <string name="ck_network_error_start">连接Github超时，检测更新失败</string>
    <string name="ck_error_start">Github返回出错，检测更新失败</string>
    <string name="try_again">重试</string>
    <string name="no_new_version">已是最新版本，无需更新</string>
    <string name="cancel">取消</string>
    <string name="download_error">下载失败</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">现在更新</string>
    <string name="update_after">暂不更新</string>
    <string name="history_title">历史记录</string>
    <string name="empty_history">没有历史记录呢(－∀＝)</string>
    <string name="delete_single_history">是否删除该历史记录？</string>
    <string name="delete_all_history">清空之后就什么都没有了哦~</string>
    <string name="get_anime_info">解析视频地址中，请稍后&#8230;</string>
    <string name="desc_history_menu">详情页</string>
    <string name="delete_history_menu">删除</string>
    <string name="delete_all_menu">清空历史</string>
    <string name="empty_download">没有下载记录呢(－∀＝)</string>
    <string name="download_anime_desc">转到番剧详情页</string>
    <string name="create_download_task">解析视频地址中，请稍后&#8230;</string>
    <string name="create_parse_download_task">解析视频真实地址中，请稍后&#8230;</string>
    <string name="download_m3u8_error">该</string>
    <string name="select_download_number">选择需要下载的剧集</string>
    <string name="download_info">下载须知&#187; \n下载标识：\n\u3000绿色→ 表示该剧集已存在下载任务。\n后台下载：\n\u3000请注意如果你需要在后台进行下载时，由于数据操作是在服务中进行，不同手机可能存在后台、锁屏后下载服务被杀死的情况，请根据自己的手机设置手动将该APP设置电池优化白名单或允许后台运行，否则后台下载时会出现下载失败的情况！\nm3u8格式：\n\u3000虽然支持m3u8格式的下载，由于m3u8存在各种加密、二级域名等情况，鉴于大部分资源都是使用AES-128加密，默认使用AES-128解密并合并文件为mp4格式，所以不一定能执行成功，如果下载失败自行删除下载任务！\n\u3000下载的视频仅在 我的→ 下载列表中进行播放，其他界面播放还是使用网络解析播放！</string>
    <string name="delete_single_download">是否删除该剧集任务？</string>
    <string name="remove_download_file">同时删除文件</string>
    <string name="download_positive">继续下载</string>
    <string name="download_negative">忽略</string>
    <string name="os_title">开源相关</string>
    <string name="disableMsg">不可用</string>
    <string name="favoriteShortName">我的追番</string>
    <string name="favoriteLongName">我的追番</string>
    <string name="historyShortName">历史记录</string>
    <string name="historyLongName">历史记录</string>
    <string name="downloadShortName">下载列表</string>
    <string name="downloadLongName">下载列表</string>
    <string name="searchShortName">搜索动漫</string>
    <string name="searchLongName">搜索动漫</string>
    <string name="set_user_speed">设置快进/快退时长</string>
    <string name="player_setting_title">播放器设置</string>
    <string name="picture_in_picture_title">画中画</string>
    <string name="hide_progress">播放时隐藏底部进度</string>
    <string name="play_next_video">自动播放下一集</string>
    <string name="airplay_title">电视投屏</string>
    <string name="player_other_title">其他操作</string>
    <string name="play_with_external_player">使用外部播放器播放</string>
    <string name="open_external_browser">通过浏览器访问原地址</string>
    <string name="url_copied">下载地址已复制到剪切板</string>
    <string name="select_tools">请选择下载工具</string>
    <string name="tools_not_found">没有找到匹配的程序</string>
    <string name="click_to_sniffer">尝试网页嗅探解析</string>
    <string name="open_drama_list">打开选集列表</string>
    <string name="authorize_msg">点击前往授权</string>
    <string name="accept_msg">同意</string>
    <string name="refuse_msg">拒绝</string>
    <string name="authorize_title_msg">特殊权限说明</string>
    <string name="file_manger_msg">Android 11 及以上需要授予所有文件的管理权限。\n注：仅用于保存追番列表、历史记录、视频下载信息。\n如果你不需要下载功能，可以拒绝授权。</string>
    <string name="device_title">设备列表</string>
    <string name="video_url">播放地址：%s</string>
    <string name="notice">请选择连接设备，连接设备后才可播放</string>
    <string name="selectedText">已选中: %s</string>
    <string name="progress">进度</string>
    <string name="volume">音量</string>
    <string name="mute">静音</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="exit">退出</string>
    <string name="main_title">首页</string>
    <string name="my_title">我的</string>
    <string name="history_detail">详情页&#187;</string>
    <string name="download_anime_list_content_title">共 %s 个内容</string>
    <string name="download_anime_list_size">空间占用: %s</string>
    <string-array name="speed_item">
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
    </string-array>
    <string-array name="week_array">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string-array name="prefix">
        <item>http://</item>
        <item>https://</item>
    </string-array>
</resources>