<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item android:id="@+id/item_week"
            android:icon="@drawable/baseline_calendar_month_white_48dp"
            android:title="@string/app_sub_name"/>

        <item
            android:id="@+id/find_anime"
            android:icon="@drawable/baseline_filter_white_48dp"
            android:title="@string/home_tag_title" />
        <item
            android:id="@+id/anime_movie"
            android:icon="@drawable/baseline_movie_white_48dp"
            android:title="@string/home_movie_title" />
        <item
            android:id="@+id/anime_zt"
            android:icon="@drawable/baseline_subscriptions_white_48dp"
            android:title="@string/home_zt_title" />
        <item
            android:id="@+id/anime_jcb"
            android:icon="@drawable/ic_ondemand_video_white_48dp"
            android:title="@string/home_jcb_title" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <!--<item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_loyalty_white_48dp"
            android:title="@string/home_my_item_title" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/baseline_history_white_48dp"
            android:title="@string/history_title" />-->
        <item
            android:id="@+id/my"
            android:icon="@drawable/baseline_person_white_48dp"
            android:title="@string/my_title" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/home_setting_item_title" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/baseline_android_white_48dp"
            android:title="@string/home_other_item_title" />
    </group>
</menu>
