<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="10dp"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/source"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/sakura"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/api_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:textColor="@color/text_color_primary"
                        android:text="@string/app_name" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/statement"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:lineSpacingExtra="3dp"
                        android:padding="5dp"
                        android:textColor="@color/text_color_primary"
                        android:text="@string/statement_desc" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/now_version"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:lineSpacingExtra="3dp"
                            android:textColor="@color/text_color_primary"
                            android:padding="5dp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/final_compile"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:lineSpacingExtra="3dp"
                        android:padding="5dp"
                        android:textColor="@color/text_color_primary"
                        android:text="@string/final_compile_time" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/test_model"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:lineSpacingExtra="3dp"
                        android:padding="5dp"
                        android:textColor="@color/text_color_primary"
                        android:text="@string/test_model_desc" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/cache"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/cache"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:lineSpacingExtra="3dp"
                        android:textColor="@color/text_color_primary"
                        android:padding="5dp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/github"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/github"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/github_url"
                        android:textColor="@color/text_color_primary"
                        android:padding="5dp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/open_source"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textColor="@color/text_color_primary"
                    android:text="@string/open_source_library"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/window_bg"
                    android:orientation="vertical" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>